feat:fix bugs